--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
   width: 600px;
   height: 600px;
   display: grid;
+  background-color: #fff;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  grid-gap: 10px;
   justify-content: center;
   align-items: center;
 }
