--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,38 @@
   /* your css goes here */
   width: 600px;
   height: 600px;
-  display: grid;
   background-color: #fff;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  justify-content: center;
-  align-items: center;
+  grid-template-rows: repeat(3, 1fr);
+  
 }
 .inner-square {
   /* your css goes here */
-  width: 100%;
-  height: 100%;
-  background-color: green;
-  
+  box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: green;
 }
 .circle {
   /* your css goes here */
-  width: 100%;
-  height: 100%;
-  background-color: blue;
-  border-radius: 50%;
+  box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: blue;
+    border-radius: 100%;
+}
+
+.inner-square:nth-child(odd) {
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.inner-square:nth-child(even) {
+  grid-column: span 2;
+  grid-row: span 2;
 }
