--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,30 @@
 .outer-square {
   /* your css goes here */
   width: 600px;
-  height: 600px;
-  background-color: #fff;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #fff;
 }
+
+.outer-square > div {
+  width: calc(33.33% - 20px); /* Adjust for spacing */
+  height: calc(33.33% - 20px); /* Adjust for spacing */
+  margin: 10px; /* 10px spacing from each side */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .inner-square {
   /* your css goes here */
-  box-sizing: border-box;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: green;
+  background-color: green;
 }
 .circle {
   /* your css goes here */
-  box-sizing: border-box;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: blue;
-    border-radius: 100%;
+  background-color: blue;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
 
-.inner-square:nth-child(odd) {
-  grid-column: span 1;
-  grid-row: span 1;
-}
-
-.inner-square:nth-child(even) {
-  grid-column: span 2;
-  grid-row: span 2;
-}
